[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77",
  "setuptools-scm>=8",
]

[project]
name = "iniconfig"
description = "brain-dead simple config-ini parsing"
readme = "README.rst"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Ronny Pfannschmidt", email = "opensource@ronnypfannschmidt.de" },
  { name = "Holger Krekel", email = "holger.krekel@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
urls.Homepage = "https://github.com/pytest-dev/iniconfig"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-xdist>=3.8",
]

[tool.setuptools]
packages = [ "iniconfig" ]
package-dir = { "" = "src" }
package-data.iniconfig = [ "py.typed" ]

[tool.setuptools_scm]
write_to = "src/iniconfig/_version.py"

[tool.ruff]
lint.extend-select = [
  "B",  # flake8-bugbear
  "I",  # isort
  "PT", # flake8-pytest-style
  "UP", # pyupgrade
]
lint.isort.force-single-line = true
lint.isort.known-first-party = [ "iniconfig" ]

[tool.pytest]
ini_options.testpaths = "testing"

[tool.mypy]
strict = true
